# footings

./: .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  environment.yml  index.html  load.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: build-n-publish.yaml  (+5 more)
conda/: meta.yaml
dev/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  license.html  objects.inv  principles.html  py-modindex.html  search.html  searchindex.js
docs/: api.md  api.rst  changelog.md  changelog.rst  conf.py  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  needs.md  special_objects.rst  user_guide.ipynb  user_guide.md  user_guide.rst
environments/: environment-dev.yml  environment-test.yml  environment.yml  footings-dev.yml
footings/: __init__.py  _version.py  argument.py  assumption.py  audit.py  calculation.py  errors.py  ffunction.py  footing.py  function.py  functions.py  levels.py  model.py  parameter.py  registry.py  schema.py  task.py  task_graph.py  to_xlsx.py  type.py  utils.py  visualize.py
main/: api.html  installation.html  license.html  py-modindex.html  search.html  searchindex.js
master/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installation.html  license.html  objects.inv  principles.html  py-modindex.html  search.html  searchindex.js
tests/: shared.py  test_argument.py  test_assumption_registry.py  test_attributes.py  test_audit.py  test_data_dictionary.py  test_ffunction.py  test_footing.py  test_functions.py  test_jigs.py  test_levels.py  test_model.py  test_parameter.py  test_scenario_registry.py  test_schema.py  test_task.py  test_testing.py  test_to_json.py  test_to_xlsx.py  test_utils.py  test_validators.py  xlsx_helpers.py
(+346 files in other folders)
