[versioneer]
VCS = git
style = pep440
versionfile_source = src/footings/_version.py
versionfile_build = footings/_version.py
tag_prefix = v
parentdir_prefix = footings-


[metadata]
name = footings
description = A model building library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://footings.readthedocs.io/
author = Dustin Tindall
author_email = dustin.tindall@gmail.com
maintainer = Dustin Tindall
maintainer_email = dustin.tindall@gmail.com
license = BSD (3-clause)
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source=https://github.com/dustindall/footings-core
    Tracker=https://github.com/dustindall/footings-core/issues


[options]
package_dir=
    =src
packages=find:
install_requires =
    attrs
    pandas
    numpydoc==1.0.*
    openpyxl
python_requires = >=3.6
test_suite = tests
include_package_data = true

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
docs =
    sphinx
dev =
    flake8
    black
    pre-commit


[bdist_wheel]
universal = true


[flake8]
exclude =
    __init__.py,
    _version.py,
    versioneer.py
ignore =
    E231, # missing whitespace after
    E722, # bare except
    W503 # line break before binary operator
max-line-length = 120
